feat: adding general sidebar

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,4 @@
-<p>sidebar works!</p>
+<mat-nav-list>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/processing-activities">Processing Activities</a>
+</mat-nav-list>
