--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,4 +1,4 @@
-<gms-header (sidebarToggle)="toggleSidebar()"></gms-header>
+<gms-header (sidebarToggle)="toggleSidebar()" (selectedLanguage)="changeLanguage($event)"></gms-header>
 
 <mat-drawer-container>
   <mat-drawer mode="side" [opened]="sidebarOpen">
