--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-divider></mat-divider>
 <footer>
-  &copy; All rights reserved {{ year }}
+  &copy; {{ 'general.rightsReserved' | translate }} {{ year }}
 </footer>
