--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,15 @@
+<mat-menu #appMenu="matMenu" yPosition="above">
+  <button mat-menu-item (click)="useLanguage('en')">English</button>
+  <button mat-menu-item (click)="useLanguage('de')">Deutsch</button>
+</mat-menu>
+
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <button mat-icon-button (click)="toggleSidebar()">
       <mat-icon>menu</mat-icon>
     </button>
 
-    <span>GDPR Management System</span>
+    <span>{{ 'general.title' | translate }}</span>
 
     <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
       <ul fxLayout="row" fxLayoutGap="20px">
@@ -16,6 +21,11 @@
         <li>
           <button mat-icon-button>
             <mat-icon>help_outline</mat-icon>
+          </button>
+        </li>
+        <li>
+          <button mat-icon-button [matMenuTriggerFor]="appMenu">
+            <mat-icon>language</mat-icon>
           </button>
         </li>
       </ul>
