--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
 <mat-nav-list>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/processing-activities">Processing Activities</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/">{{ 'navigation.dashboard' | translate }}</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/processing-activities">{{ 'navigation.processingActivities' | translate }}</a>
 </mat-nav-list>
