fix: making tests executable with translations and remove warnings
loading translations in component tests where needed
remove all warnings in cause of importing all needed modules

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-divider></mat-divider>
 <footer>
-  &copy; {{ 'general.rightsReserved' | translate }} {{ year }}
+  &copy; <span id="legal">{{ 'general.rightsReserved' | translate }}</span> {{ year }}
 </footer>
